# video_analyzer

./: .env.example  .gitignore  README.md  pyproject.toml
app/: config.py  main.py  models.py  schemas.py  services.py
app/static/: app.js  style.css
app/templates/: index.html
tests/: test_app.py
